test/fail/enums_and_variants/wrong_arg_count_scoped_variant.lly
#[
SyntaxError: Wrong number of arguments to Some (2 for 1).
    from wrong_arg_count_scoped_variant.lly:11
]#

enum Option[A] {
	::Some(A)
	::None
}

var opt: Option[integer] = Option::Some(1, 2)
